# LSystem_Interpreter

./: CMakeLists.txt  README.md
Include/: LSystemInterpreter.hpp
sources/: LSystem.cpp  LSystemDrawTurtle.py  Production.cpp  beautiful_tree.txt  beautiful_tree2.txt  beautiful_tree3.txt  new_tree.txt  turtleeee_output.txt
testing/: test.cpp
